Fixed annoying overflow bug on sub-pages

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,9 +9,6 @@ body {
   background-color: #121212;
   font-size: 14px;
   font-family: "Fira Sans", sans-serif;
-  position: relative;
-  display: flex;
-  flex-direction: column;
   width: 100%;
 }
 
